2003-07-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-cache-whitespace): make "adding
	whitespace" message level 5 instead of 4
	(gnus-registry-clean-empty-function): new function to remove empty
	registry entries
	(gnus-registry-clean-empty): new variable to enable cleaning the
	registry when saving it by calling gnus-registry-clean-empty-function

	* spam.el (spam-summary-prepare-exit): use spam-process-ham-in-spam-groups
	(spam-process-ham-in-spam-groups): new variable

2003-07-24  Jesper Harder  <harder@ifa.au.dk>

	* pgg-gpg.el (pgg-gpg-process-region): Add "--yes" to options.

	* pgg-gpg.el, pgg-pgp.el, pgg-pgp5.el, pgg.el: Reapply changes
	from 2003-04-03 to fix security problem.  See
	http://www.debian.org/security/2003/dsa-339

2003-07-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.el (gnus-install-group-spam-parameters): add the
	gnus-ticked-mark to the possible choices of ham marks

	* spam.el (spam-process-ham-in-nonham-groups): new variable
	(spam-summary-prepare-exit): use spam-process-ham-in-nonham-groups

2003-07-23  Jesper Harder  <harder@ifa.au.dk>

	* rfc2047.el (rfc2047-header-encoding-alist): Add Mail-Followup-To
	and Mail-Copies-To to address-mime.
	(rfc2047-narrow-to-field): Use rfc2047-point-at-bol.

2003-07-19  Jesper Harder  <harder@ifa.au.dk>

	* mm-util.el (mm-coding-system-priorities): Docstring improvement.

2003-07-17  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-thread-latest-date): Move condition-case to
	the right place.

2003-07-14  Simon Josefsson  <jas@extundo.com>

	* mail-source.el (mail-source-fetch-imap): Don't assume
	imap-error-text returns something.

2003-07-12  Nevin Kapur  <kapur@mts.jhu.edu>

	* nnimap.el (nnimap-request-newgroups): Use the pattern in
	nnimap-list-pattern instead of "*".

2003-07-10  Simon Josefsson  <jas@extundo.com>

	* mml-sec.el (mml-signencrypt-style-alist): Use "combined" by
	default.  Improve docstring.
